# nn-zero-to-hero

./: .gitignore  pyproject.toml
lectures/micrograd/: micrograd_lecture_first_half_roughly.ipynb  micrograd_lecture_second_half_roughly.ipynb
