[tool.poetry]
name = "nn-zero-to-hero"
version = "0.1.0"
description = "tutorial for nn"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "<2.0.0"
matplotlib = "^3.9.1"
graphviz = "^0.20.3"
torch = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
